# persona-kit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  alembic.ini  docker-compose.pgvector.yml  docker-compose.yml  mindscape-persona-schema-options.md  package.json  persona-kit-data-schema.md  persona-kit-overview.md  pyproject.toml  start-personakit.sh  vector.toml
alembic/: env.py
alembic/versions/: 3d1e8dc27c47_rename_metadata_column_and_add_.py  4060dc39aa98_fix_outbox_tasks_schema_final.py  5fa63bf0a53d_initial_schema_with_type_checks.py  6c614228dc41_add_retry_fields_to_outbox_tasks.py  add_missing_persona_columns.py  dd3d4be5ab7c_convert_embedding_to_vector_type.py  e53c88db94b1_add_users_table_for_authentication.py  fix_task_status_enum.py
configs/examples/: daily_work_optimizer.yaml  therapy_insights.yaml
docs/: README.md  cli-example-output.md  knowledge-store-impl-strategy-notes.md  persona-kit-admin-tool-design.md  persona-kit-data-schema.md  persona-kit-explorer-design.md  persona-kit-implementation-guide.md  persona-kit-overview.md  persona-kit-technical-spec.md  persona-kit-v0.1-specification.md  persona-kit-v0.1.1-unified-plan.md  supplementary-prompts.md
docs/adr/: 001-service-architecture.md  002-postgresql-jsonb-storage.md  003-configuration-driven-mappers.md  004-api-key-authentication.md  005-pgvector-semantic-search.md  006-local-embedding-generation.md  007-two-phase-data-architecture.md  008-optimistic-locking.md  009-pull-based-interaction.md  010-feedback-driven-weights.md  011-rest-api-design.md  012-immutable-observations.md  013-vector-centralized-logging.md  README.md
docs/architecture/: app-integration-patterns.md  (+6 more)
examples/: README.md
persona-kit-workbench/: README.md  pyproject.toml  start-cli.sh  start-mock-server.sh
persona-kit-workbench/src/personakit_workbench/: __init__.py  api_client.py  cli.py  logging_config.py
persona-kit-workbench/src/personakit_workbench/bootstrap/: __init__.py  mock_data.py  wizard.py
scripts/: init-db.sql  start.sh  status.sh  test_bootstrap_flow.py  test_cli_suggest.py  test_config_driven_flow.py  test_feedback_flow.py  test_jsonb_operations.py  test_jsonb_simple.py  test_persona_generation.py  verify_indexes.py
src/: config.py  database.py  logging_config.py  main.py
tests/: conftest.py  test_embedding_service.py  test_feedback.py  test_health.py  test_mappers.py  test_models.py  test_narrative_api_integration.py  test_narrative_integration.py  test_narrative_performance_simple.py  test_narrative_service_real.py  test_narrative_simple.py  test_narratives_comprehensive.py  test_observation_processing.py  test_persona_generation_refactor.py  test_real_narrative_flow.py  test_repositories.py
(+176 files in other folders)
