[project]
name = "persona-kit-workbench"
version = "0.1.0"
description = "Workbench for PersonaKit - tools for bootstrapping, testing, and development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.2",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
persona-kit-workbench = "personakit_workbench.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personakit_workbench"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"